--- a/index.html
+++ b/index.html
@@ -1,4 +1,2 @@
-<script language="javascript" type="text/javascript"> 
-// 以下方式直接跳转
-window.location.href='http://104.33.65.222/web';
-</script>
+<iframe src="104.33.65.222/web"></iframe>
+
