--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<iframe src="http://104.33.65.222/web"></iframe>
+<iframe src="http://104.33.65.222/web" width="100%" onload="this.height=iFrame1.document.body.scrollHeight" frameborder="0"></iframe>
 
