--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<iframe id="test-frame" src="http://104.33.65.222/web" onload="this.height=iFrame1.document.body.scrollHeight" frameborder="0"></iframe>
+<iframe id="test-frame" src="http://104.33.65.222/web" height="100%" width="100%" frameborder="0"></iframe>
 
